--- a/src/utils/styles.scss
+++ b/src/utils/styles.scss
@@ -133,7 +133,9 @@ html {
   border: solid 1px red;
   display: flex;
   justify-content: center;
-  height: 80vh;
+  flex-direction: column;
+  gap: 2rem;
+  height: 90vh;
   align-items: center;
 }
 
@@ -160,6 +162,17 @@ html {
 
 .board-row {
   display: flex;
+}
+
+.footer {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  width: 30rem;
+}
+
+.status {
+  font-weight: 900;
 }
 
 @media only screen and (max-width: 1366px) {
