--- a/src/utils/styles.scss
+++ b/src/utils/styles.scss
@@ -131,11 +131,58 @@ html {
 
 .board {
   display: flex;
+  justify-content: space-evenly;
+  flex-direction: row;
+  gap: 2rem;
+  height: 90vh;
+  align-items: center;
+}
+
+.game-wrapper {
+  display: flex;
   justify-content: center;
   flex-direction: column;
   gap: 2rem;
   height: 90vh;
   align-items: center;
+}
+
+.game-record {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-color: $cream;
+  gap: 0.1rem;
+  height: 90vh;
+  align-items: center;
+  height: 30rem;
+  width: 25rem;
+  border-radius: 10px;
+}
+.game-record .header {
+  display: flex;
+  justify-content: flex-end;
+  flex-direction: row;
+  gap: 2rem;
+  width: 100%;
+  padding-right: 6rem;
+}
+
+.game-list-records-wrapper {
+  display: flex;
+  flex-direction: column;
+  gap: 0.3rem;
+}
+
+.game-list-records {
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-start;
+  width: 22rem;
+}
+
+.game-list-records .item {
+  flex: 20%;
 }
 
 .square {
@@ -179,6 +226,18 @@ html {
   flex-direction: row;
   width: 30rem;
   justify-content: space-around;
+}
+
+.error-message {
+  color: $secondary_color;
+  padding: 5px;
+}
+
+.player-modal {
+  display: flex;
+  justify-content: center;
+  flex-direction: column;
+  gap: 1rem;
 }
 
 @media only screen and (max-width: 1366px) {
